use-case-testing/uc-5/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a-1
  labels:
    team: tenant-a
---
apiVersion: v1
kind: Namespace
metadata:
  name: tenant-a-2
  labels:
    team: tenant-a
