use-case-testing/uc-5/allow-tenant-a.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tenant-a
  namespace: tenant-a-1
spec:
  selector: all()
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      namespaceSelector: team == 'tenant-a'
---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-tenant-a
  namespace: tenant-a-2
spec:
  selector: all()
  types:
  - Ingress
  ingress:
  - action: Allow
    source:
      namespaceSelector: team == 'tenant-a'
